<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="msg">Hello, Android!</string>

    <string name="app_name">HelloWorld</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Grid</string>
    <string name="clear">清除</string>
   	<string name="gridview">GridView</string>
   	<string name="gallery">Gallery</string>
   	<string name="image_switcher">ISwher</string>
   	<string name="viewflipper">ViewFlipper</string>
   	<string name="searchview">SearchView</string>
   	<string name="tabhost">TabHo</string>
   	<string name="alertdialog">AlertDialog</string>
   	<string name="dialog1">dialog1</string>
   	<string name="dialog2">dialog2</string>
   	<string name="dialog3">dialog3</string>
   	<string name="dialog4">dialog4</string>
   	<string name="dialog5">dialog5</string>
   	<string name="dialog6">dialog6</string>
   	<string name="progressdialog1">pdialog1</string>
   	<string name="progressdialog2">pdialog2</string>
   	<string name="progressdialog3">pdialog3</string>
   	<string name="username">用户名:</string>
   	<string name="loginhint">请填写登录账号:</string>
   	<string name="passowrd">密码：</string>
   	<string name="passhint">请填写密码:</string>
   	<string name="phone">电话号码:</string>
   	<string name="phonehint">请填写您的电话号码：</string>
   	<string name="popwindow1">popwindow1</string>
   	<string name="closepopwindow">closepopwindow</string>
   	<string name="font_size">字体大小</string>
   	<string name="font_10">font_10</string>
   	<string name="font_12">font_12</string>
   	<string name="font_14">font_14</string>
   	<string name="font_16">font_16</string>
   	<string name="font_18">font_18</string>
   	<string name="plain_item">普通菜单项</string>
   	<string name="font_color">字体颜色</string>
   	<string name="red_title">红色</string>
   	<string name="green_title">绿色</string>
   	<string name="blue_title">蓝色</string>
   	<string name="menu">Menu</string>
   	<string name="add">添加</string>
   	<string name="select">查找</string>
   	<string name="edit">编辑</string>
   	<string name="hidden">隐藏菜单</string>
   	<string name="popmenu">弹出式菜单</string>
   	<string name="showbar">显示actionbar</string>
   	<string name="hidebar">隐藏actionbar</string>
   	<string name="bartab">Btab</string>
   	<string name="tabswipe">TabSwipe</string>
   	<string name="abardown">AbarDo</string>
   	<string name="playgame">Play</string>
   	<string name="drawview">Draw</string>
   	<string name="changeori">changeori</string>
   	<string name="handler">handler</string>
   	<string name="cal">cal</string>
   	<string name="asynctask">AsyncTask</string>
   	<string name="launcher">Launcher</string>
   	<string name="bundle">Bundle</string>
   	<string name="regtip">请输入注册信息</string>
   	<string name="usernametip">请填写想注册的账号</string>
   	<string name="sex">性别:</string>
   	<string name="male">男</string>
   	<string name="female">女</string>
   	<string name="register">注册</string>
   	<string name="forresult">ActivityResult</string>
   	<string name="bntext">选择您所在城市</string>
   	<string name="selectbook">SelectBook</string>
   	<string name="sysaction">Sysaction</string>
   	<string name="textContact">查看联系人</string>
   	<string name="home">返回主菜单</string>
   	<string name="datatype">DataType</string>
   	<string name="type1">按钮1</string>
   	<string name="type2">按钮2</string>
   	<string name="type3">按钮3</string>
   	<string name="catearr">CateAttr</string>
   	<string name="returnhome">ReturnHome</string>
   	<string name="datetype">DateType</string>
   	<string name="scheme">scheme</string>
   	<string name="schemehostport">schemehostport</string>
   	<string name="schemehostpath">schemehostpath</string>
   	<string name="schemehostportpath">schemehostportpath</string>
   	<string name="schemehostportpathtype">schemehostportpathtype</string>
   	<string name="actiondata">ActionData</string>
   	<string name="Url">Url</string>
   	<string name="contacts">Contacts</string>
   	<string name="call">call</string>
   	<string name="intenttab">Itab</string>
   	<string name="c1">F00</string>
   	<string name="c2">0F0</string>
   	<string name="c3">00F</string>
   	<string name="c4">0FF</string>
   	<string name="c5">F0F</string>
   	<string name="c6">FF0</string>
   	<string name="c7">07F</string>
   	<string name="c8">70F</string>
   	<string name="c9">F70</string>
   	<string name="valuetest">ValueTest</string>
   	<string name="arraytest">ArrTest</string>
   	<string name="statelist">StateList</string>
   	<string name="layer">Layer</string>
   	<string name="shape">Shape</string>
   	<string name="clipdraw">ClipDraw</string>
   	<string name="animat">Animat</string>
   	<string name="stop">停止</string>
    <string name="start">开始</string>
    <string name="animator">Animator</string>
    <string name="xmlrestest">XmlTest</string>
    <string name="xmljiexi">解析XML资源</string>
    <string name="style">Style</string>
    <string name="style1">样式1的样式</string>
    <string name="style2">样式2的样式</string>
    <string name="alphaimage">Alpha</string>
    <string name="rawrestest">RawTest</string>
    <string name="open1">播放测试音1</string>
	<string name="open2">播放测试音2</string>
	<string name="i18n">I18n</string>
	<string name="bitmap">BitMap</string>
	<string name="next">下一个</string>
	<string name="canvas">Canvas</string>
	<string name="path">Path</string>
    <string name="pathtext">PathText</string>
    <string name="color">颜色</string>
    <string name="color_red">红色</string>
    <string name="color_green">绿色</string>
    <string name="color_blue">蓝色</string>
    <string name="width">宽度</string>
    <string name="width_1">宽度1</string>
	<string name="width_3">宽度3</string>
    <string name="width_5">宽度5</string>
	<string name="blur">blur</string>
	<string name="emboss">emboss</string>
	<string name="handdraw">HDraw</string>
	<string name="pinball">Pinball</string>
	<string name="matrix">Matrix</string>
	<string name="move">Move</string>
	<string name="warp">Warp</string>
	<string name="shader">Shader</string>
	<string name="bn1">bn1</string>
	<string name="bn2">bn2</string>
	<string name="bn3">bn3</string>
	<string name="bn4">bn4</string>
	<string name="bn5">bn5</string>
	<string name="fatpo">FatPo</string>
	<string name="blast">Blast</string>
	<string name="tweenanim">TweenAnim</string>
	<string name="butterfly">Butterfly</string>
	<string name="listviewtween">ListTween</string>
	<string name="animatortest">Animator</string>
	<string name="bouncingball">BouncingBall</string>
	<string name="surfaceview">SurfaceView</string>
	<string name="wave">Wave</string>
	<string name="sin">Sin</string>
	<string name="cos">Cos</string>
	<string name="sharepre">SharePre</string>
	<string name="write">Write</string>
	<string name="read">Read</string>
	<string name="usecount">UseCount</string>
	<string name="filetest">Filetest</string>
	<string name="sdcardtest">SDCard</string>
	<string name="sdexplorer">SDExplorer</string>
	<string name="dbtest">DBTest</string>
	<string name="dict">Dict</string>
	<string name="word">word</string>
	<string name="detail">detail</string>
	<string name="search">查找</string>
	<string name="js">解释</string>
	<string name="ditc_title">找到的单词</string>
	<string name="gesturetest">Gesture</string>
	<string name="gesturezoom">GestureZoom</string>
	<string name="gesturefilp">GestureFlip</string>
	<string name="addgesture">AddGesture</string>
	<string name="tips">请在下面屏幕上绘制手势</string>
	<string name="gesture_name">请填手势名：</string>
	<string name="recogestre">ReGes</string>
	<string name="speech">Speech</string>
	<string name="speechs">朗读</string>
	<string name="record">记录声音</string>
	<string name="chaper1">第一章~第八章</string>
	<string name="chaper9">第九章</string>
	<string name="dictresolver">DictResolver</string>
	<string name="words">单词:</string>
	<string name="details">解释:</string> 
	<string name="key">查找单词:</string>
	<string name="name">姓名:</string>
	<string name="email">邮件地址:</string>
	<string name="contactprovider">ContactProvider</string>
	<string name="mediaprovider">MediaProvider</string>
	<string name="view">查找</string>
	<string name="monitorsms">MonitorSms</string>
	<string name="firstservice">StartService</string>
	<string name="bindservice">BindService</string>
	<string name="unbindservice">UnBindService</string>
	<string name="servicestatus">ServiceStatus</string>
	<string name="intentservice">IntentService</string>
	<string name="startservice">StartService</string>
	<string name="startintentservice">StartIntentService</string>
	<string name="telephonystatus">TelephonyStatus</string>
	<string name="monitorphone">MonitorPhone</string>
	<string name="blockmain">BlockMain</string>
	<string name="blockmanager">黑名单管理</string>
	<string name="sendsms">SendSms</string>
	<string name="sms">消息内容:</string>
	<string name="send">发送</string>
	<string name="groupsend">GroupSend</string>
	<string name="selectphone">选择发送号码</string>
	<string name="audiotest">AudioTest</string>
	<string name="play">播放</string>
	<string name="up">增加音量</string>
	<string name="down">减小音量</string>
	<string name="mute">静音(开)</string>
	<string name="nomute">静音(关)</string>
	<string name="vibratortest">VibratorTest</string>
	<string name="alarmtest">AlarmTest</string>
	<string name="btn_settime">设置闹钟</string>
	<string name="wallpapers">壁纸</string>
	<string name="broadcast">Broadcast</string>
	<string name="sortedbroadcast">SortedBroadcast</string>
	<string name="musicbox">MusicBox</string>
	<string name="chaper10">第十章</string>
	<string name="mediaplayer">MediaPlayer</string>
	<string name="soundpool">SoundPool</string>
	<string name="bomb">Bomb</string>
	<string name="shot">Shot</string>
	<string name="arraw">Arraw</string>
	<string name="video">Video</string>
	<string name="recordsound">RecordSound</string>
	<string name="captureimage">CaptureImage</string>
	<string name="photo_name">照片名称</string>
	<string name="recordvideo">RecordVideo</string>
	<string name="polygon">Polygon</string>
	<string name="multiclient">Multiclient</string>
	<string name="urltest">UrlTest</string>
	<string name="getpostutil">GetPostUtil</string>
	<string name="get">发送GET请求</string>
	<string name="post">发送POST请求</string>
	
    
</resources>