<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:icon="@drawable/bom1"
        android:title="@string/font_size"
        android:showAsAction="always|withText">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/font_10"
                    android:title="@string/font_10">
                </item>
                <item
                    android:id="@+id/font_12"
                    android:title="@string/font_12">
                </item>
                <item
                    android:id="@+id/font_14"
                    android:title="@string/font_14">
                </item>
                <item
                    android:id="@+id/font_16"
                    android:title="@string/font_16">
                </item>
                <item
                    android:id="@+id/font_18"
                    android:title="@string/font_18">
                </item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/plain_item"
        android:title="@string/plain_item"
        android:showAsAction="always|withText"/>
    <item
        android:icon="@drawable/ic_launcher"
        android:title="@string/font_color"
        android:showAsAction="always">
        <menu>
            <group>
                <item
                    android:id="@+id/red_font"
                    android:title="@string/red_title">
                </item>
                <item
                    android:id="@+id/green_font"
                    android:title="@string/green_title">
                </item>
                <item
                    android:id="@+id/blue_font"
                    android:title="@string/blue_title">
                </item>
            </group>
        </menu>
    </item>

</menu>