<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1200dp" >
	
    <Button
        android:id="@+id/btn_dictresolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dictresolver" />

    <Button
        android:id="@+id/btn_contactprovider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btn_dictresolver"
        android:text="@string/contactprovider" />

    <Button
        android:id="@+id/btn_mediaprovider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_dictresolver"
        android:text="@string/mediaprovider" />

    <Button
        android:id="@+id/btn_monitorsms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_contactprovider"
        android:layout_toRightOf="@+id/btn_mediaprovider"
        android:text="@string/monitorsms" />

    <Button
        android:id="@+id/btn_stratservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_mediaprovider"
        android:text="@string/firstservice" />

    <Button
        android:id="@+id/btn_bindservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_stratservice"
        android:layout_alignBottom="@+id/btn_stratservice"
        android:layout_alignLeft="@+id/btn_contactprovider"
        android:text="@string/bindservice" />

    <Button
        android:id="@+id/btn_intentservicetest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_stratservice"
        android:text="@string/intentservice" />

    <Button
        android:id="@+id/btn_telephonystatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_bindservice"
        android:layout_toRightOf="@+id/btn_intentservicetest"
        android:text="@string/telephonystatus" />

    <Button
        android:id="@+id/btn_monitorphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_intentservicetest"
        android:text="@string/monitorphone" />

    <Button
        android:id="@+id/btn_blockmain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_monitorsms"
        android:layout_below="@+id/btn_telephonystatus"
        android:text="@string/blockmain" />

    <Button
        android:id="@+id/btn_sendsms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_monitorphone"
        android:text="@string/sendsms" />

    <Button
        android:id="@+id/btn_groupsend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_monitorphone"
        android:layout_toRightOf="@+id/btn_sendsms"
        android:text="@string/groupsend" />

    <Button
        android:id="@+id/btn_audiotest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_blockmain"
        android:layout_toRightOf="@+id/btn_groupsend"
        android:text="@string/audiotest" />

    <Button
        android:id="@+id/btn_vibratortest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_sendsms"
        android:text="@string/vibratortest" />

    <Button
        android:id="@+id/btn_alarmtest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_groupsend"
        android:layout_toRightOf="@+id/btn_vibratortest"
        android:text="@string/alarmtest" />

    <Button
        android:id="@+id/btn_wall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_alarmtest"
        android:layout_alignBottom="@+id/btn_alarmtest"
        android:layout_toRightOf="@+id/btn_alarmtest"
        android:text="@string/wallpapers" />

    <Button
        android:id="@+id/btn_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_vibratortest"
        android:text="@string/broadcast" />

    <Button
        android:id="@+id/btn_sortedbroadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_vibratortest"
        android:layout_toRightOf="@+id/btn_broadcast"
        android:text="@string/sortedbroadcast" />

    <Button
        android:id="@+id/btn_musicbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_broadcast"
        android:text="@string/musicbox" />

	</RelativeLayout>

</ScrollView>