<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_alert1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="simple"
        android:text="@string/dialog1" />

    <Button
        android:id="@+id/btn_alert2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="simpleList"
        android:text="@string/dialog2" />

    <Button
        android:id="@+id/btn_alert3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="singleChoice"
        android:text="@string/dialog3" />

    <Button
        android:id="@+id/btn_alert4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="multiChoice"
        android:text="@string/dialog4" />

    <Button
        android:id="@+id/btn_alert5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="customList"
        android:text="@string/dialog5" />

    <Button
        android:id="@+id/btn_alert6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="customView"
        android:text="@string/dialog6" />

    <Button
        android:id="@+id/btn_alert7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popwindow1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_progressdialog1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progressdialog1" 
            android:onClick="showSpinner"/>

        <Button
            android:id="@+id/btn_progressdialog2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progressdialog2" 
            android:onClick="showIndeterminate"/>
        
        <Button
            android:id="@+id/btn_progressdialog3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progressdialog3" 
            android:onClick="showProgress"/>
        
    </LinearLayout>

</LinearLayout>