<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_play"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/play" />

    <Button
        android:id="@+id/btn_up"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/up" />

    <Button
        android:id="@+id/btn_down"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/down" />
    
    <ToggleButton 
        android:id="@+id/btn_mute"
        android:textOn="@string/nomute"
        android:textOff="@string/mute"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>