<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_mediaplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mediaplayer" />

    <Button
        android:id="@+id/btn_soundpool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btn_mediaplayer"
        android:text="@string/soundpool" />

    <Button
        android:id="@+id/btn_videoview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btn_soundpool"
        android:text="@string/video" />

    <Button
        android:id="@+id/btn_surfaceview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_mediaplayer"
        android:text="@string/surfaceview" />

    <Button
        android:id="@+id/btn_recordsound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_soundpool"
        android:layout_below="@+id/btn_soundpool"
        android:text="@string/recordsound" />

    <Button
        android:id="@+id/btn_captureimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_surfaceview"
        android:text="@string/captureimage" />

    <Button
        android:id="@+id/btn_recordvideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_captureimage"
        android:layout_alignBottom="@+id/btn_captureimage"
        android:layout_toRightOf="@+id/btn_captureimage"
        android:text="@string/recordvideo" />

    <Button
        android:id="@+id/btn_polygon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_captureimage"
        android:text="@string/polygon" />

    <Button
        android:id="@+id/btn_multiclient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_captureimage"
        android:layout_toRightOf="@+id/btn_polygon"
        android:text="@string/multiclient" />

    <Button
        android:id="@+id/btn_urltest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_recordvideo"
        android:layout_toRightOf="@+id/btn_multiclient"
        android:text="@string/urltest" />

    <Button
        android:id="@+id/btn_getpostutil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_polygon"
        android:text="@string/getpostutil" />

</RelativeLayout>