<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/regtip"
        android:textSize="20sp"/>

    <TableRow >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"/>
        
        <EditText 
            android:id="@+id/edname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernametip"
            android:selectAllOnFocus="true"/>
    </TableRow>
    <TableRow >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/passowrd"
            android:textSize="16sp"/>
        <EditText 
            android:id="@+id/edpass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"/>
    </TableRow>
    <TableRow >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="16sp"/>
        <RadioGroup 
            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <RadioButton 
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="16sp"/>
            
            <RadioButton 
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="16sp"/>
            
        </RadioGroup>
    </TableRow>
    
    <Button 
        android:id="@+id/bn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="16sp"/>
</TableLayout> 