<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
    
    
    <TableRow >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            />
        
        <EditText 
            android:id="@+id/ed_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phonehint"
            android:singleLine="false"/>
    </TableRow>
    
    <TableRow >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sms" 
            />
        <EditText 
            android:id="@+id/ed_sms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            
            />
    </TableRow>
    
    <Button 
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectphone"/>
    
    <Button 
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"/>
    

</TableLayout>