<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/tv_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        />

    <Button
        android:id="@+id/btn_popmenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popmenu" 
        android:onClick="onPopupButtonClick"/>

    <Button
        android:id="@+id/btn_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showbar" />

    <Button
        android:id="@+id/btn_hidden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hidebar" />

</LinearLayout>